tests/ui/generator/static-not-unpin.current.stderr
error[E0277]: `[static generator@$DIR/static-not-unpin.rs:14:25: 14:34]` cannot be unpinned
  --> $DIR/static-not-unpin.rs:17:18
   |
LL |     assert_unpin(generator);
   |     ------------ ^^^^^^^^^ the trait `Unpin` is not implemented for `[static generator@$DIR/static-not-unpin.rs:14:25: 14:34]`
   |     |
   |     required by a bound introduced by this call
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required by a bound in `assert_unpin`
  --> $DIR/static-not-unpin.rs:10:20
   |
LL | fn assert_unpin<T: Unpin>(_: T) {
   |                    ^^^^^ required by this bound in `assert_unpin`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
